fix(frontend): fix title editor colors in dark mode

--- a/frontend/src/styles/editableTaskTitle.module.css
+++ b/frontend/src/styles/editableTaskTitle.module.css
@@ -66,7 +66,8 @@
     border: none;
     font-family: 'Inter';
     font-size: 32px;
-    color: #1d1f21;
+    color: var(--foreground);
+    background: var(--inputBackground);
     font-weight: 700;
     border-radius: 10px;
     padding: 10px;
